# GABRIEL-prerelease

./: CLA.md  MANIFEST.in  README.md  clique.py  county_counter.py  openai_utils_aug_12_save.py  pyproject.toml  regional.py
.github/workflows/: cla.yml
docs/: README.md
examples/: library_stress_test.ipynb
notebooks/: map_experiments.ipynb
src/gabriel/: __init__.py  api.py
src/gabriel/cli/: __main__.py
src/gabriel/core/: llm_client.py  prompt_template.py
src/gabriel/prompts/: bucket_prompt.jinja2  classification_prompt.jinja2  codify_prompt.jinja2  comparison_prompt.jinja2  deduplicate_prompt.jinja2  deduplication_prompt.jinja2  deidentification_prompt.jinja2  extraction_prompt.jinja2  filter_prompt.jinja2  ideation_prompt.jinja2  merge_prompt.jinja2  paraphrase_prompt.jinja2  rankings_prompt.jinja2  ratings_prompt.jinja2  seed.jinja2  snippets.jinja2
src/gabriel/tasks/: __init__.py  _attribute_utils.py  bucket.py  classify.py  codify.py  compare.py  county_counter.py  debias.py  deduplicate.py  deidentify.py  discover.py  elo.py  extract.py  filter.py  ideate.py  merge.py  paraphrase.py  rank.py  rate.py  recursive_elo.py  recursive_rank.py  regional.py  seed.py  whatever.py
src/gabriel/utils/: __init__.py  audio_utils.py  file_utils.py  logging.py  mapmaker.py  media_utils.py  modality_utils.py  openai_utils.py  parsing.py  passage_viewer.py  pdf_utils.py  plot_utils.py  prompt_paraphraser.py  prompt_utils.py  word_matching.py
tests/: test_basic.py  test_codify_completion.py  test_colab_viewer.py  test_custom_template.py  test_debias.py  test_deduplicate.py  test_discover_exports.py  test_filter.py  test_get_all_embeddings.py  test_imports.py  test_input_image_url.py  test_load_files.py  test_merge.py  test_openai_dummy.py  test_parallelization_tuning.py  test_plot_utils.py  test_reasoning_summary.py  test_reset_files.py  test_timeout_burst.py  test_timeout_logic.py
